2010-06-17  Jaroslav Hajek  <highegg@gmail.com>

	* MatrixType.cc (matrix_real_probe): Use OCTAVE_LOCAL_BUFFER for
	temporary array.
	(matrix_complex_probe): Parametrize by real type. Use
	OCTAVE_LOCAL_BUFFER for temporary array.

2010-06-16  Rik <octave@nomad.inbox5.com>

        * DASSL-opts.in: Periodic grammar check on documentation.

2010-06-16  David Bateman  <dbateman@free.fr>

	* oct-rand.cc (void octave_rand:do_reset (void),
	void octave_rand:do_reset (const std::string&)): New functions
	* oct-rand.h (void octave_rand:do_reset (void),
	void octave_rand:do_reset (const std::string&)): Declare them
	(void octave_rand:reset (void),
	void octave_rand:reset (const std::string&)): New functions.

2010-06-16  Jaroslav Hajek  <highegg@gmail.com>

	* CMatrix.cc (ComplexMatrix::lssolve (const ComplexMatrix&)):
	Workaround LAPACK bug.
	* fCMatrix.cc (FloatComplexMatrix::lssolve (const FloatComplexMatrix&)):
	Ditto.

2010-06-14  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array::sort, Array::nth_element): Fix behavior when
	trailing singleton dim is specified.
	* Sparse.cc (Sparse::sort): Ditto.

2010-06-14  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::copy_data): Handle class_mask case.
	(idx_vector::increment): Fix class_colon and add class_mask.

2010-06-06  Michael Goffioul  <michael.goffioul@gmail.com>

	* mx-op-defs.h (MNANCHK): Add matrix element type argument and use it
	to specify template argument for mx_inline_any_nan.
	(MS_BOOL_OP, SM_BOOL_OP, MM_BOOL_OP, NDS_BOOL_OP, SND_BOOL_OP,
	NDND_BOOL_OP): Specify new MNANCHK argument.

2010-06-04  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.cc: New source.
	* Makefile.am: Add it.
	* dim-vector.h (dim_vector::chop_all_singletons, 
	dim_vector::str, dim_vector::num_ones, dim_vector::safe_numel, 
	dim_vector::squeeze, dim_vector::concat, dim_vector::redim):
	Move bodies to dim_vector.cc. 
	(dim_vector::concat): Rewrite.